--- a/scrapy.cfg
+++ b/scrapy.cfg
@@ -4,8 +4,8 @@
 # https://scrapyd.readthedocs.org/en/latest/deploy.html
 
 [settings]
-default = spider_scrapy_lianjia.settings
+default = bitcointalk_spider.settings
 
 [deploy]
 #url = http://localhost:6800/
-project = spider_scrapy_lianjia
+project = bitcointalk_spider
